fixing z-index error

--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ main .container .left .profile {
     width: 100%;
     position: relative;
     overflow: hidden;
+    z-index: -1;
 }
 .middle .stories .story::before {
     content: "";
